<resources>
    <string name="app_name">AndroidAcademyWorkshop</string>

    <string name="back">Back</string>
    <string name="movie_view">movie_view</string>

    <string name="age_admission">%1$s+</string>
    <string name="reviews">%1$s Reviews</string>
    <string name="timing">%1$s min</string>

    <string name="movie_title">Avengers:\nEnd Game</string>
    <string name="movie_title2">Avengers: End Game</string>
    <string name="movie_type">Action, Adventure, Fantasy</string>

    <string name="storyline">Storyline</string>
    <string name="movie_desc">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="star_on">star on</string>
    <string name="star_off">star off</string>
    <string name="like">like</string>
    <string name="movies_list">Movies list</string>
</resources>