<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/imgMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="-30dp"
            android:src="@drawable/mask"
            android:contentDescription="@string/movie_view"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgMovieCover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/movie_view"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgMoviePoster"
            app:layout_constraintBottom_toBottomOf="@+id/imgMoviePoster" />

        <ImageView
            android:id="@+id/imgPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/movie_view"
            android:src="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textColor="@color/back"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imgPath"
            app:layout_constraintStart_toEndOf="@+id/imgPath"
            app:layout_constraintTop_toTopOf="@+id/imgPath" />

        <TextView
            android:id="@+id/txtAgeAdmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/age_admission"
            android:padding="4dp"
            android:background="@color/black"
            android:textColor="@color/movie_age_admission"
            app:layout_constraintBottom_toTopOf="@+id/txtMovieTitle"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart" />

        <TextView
            android:id="@+id/txtMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textColor="@color/movie_title"
            android:textSize="@dimen/name_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imgMoviePoster"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/imgMoviePoster" />

        <TextView
            android:id="@+id/txtMovieType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_type"
            android:textColor="@color/movie_type"
            android:textSize="@dimen/normal_size"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieTitle" />

        <ImageView
            android:id="@+id/imgStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/star_on"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieType"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/imgStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/star_on"
            app:layout_constraintBottom_toBottomOf="@+id/imgStar1"
            app:layout_constraintStart_toEndOf="@+id/imgStar1"
            app:layout_constraintTop_toTopOf="@+id/imgStar1"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/imgStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/star_on"
            app:layout_constraintBottom_toBottomOf="@+id/imgStar1"
            app:layout_constraintStart_toEndOf="@+id/imgStar2"
            app:layout_constraintTop_toTopOf="@+id/imgStar1"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/imgStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/star_on"
            app:layout_constraintBottom_toBottomOf="@+id/imgStar1"
            app:layout_constraintStart_toEndOf="@+id/imgStar3"
            app:layout_constraintTop_toTopOf="@+id/imgStar1"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/imgStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/star_off"
            app:layout_constraintBottom_toBottomOf="@+id/imgStar1"
            app:layout_constraintStart_toEndOf="@+id/imgStar4"
            app:layout_constraintTop_toTopOf="@+id/imgStar1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_off" />

        <TextView
            android:id="@+id/txtReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reviews"
            android:textColor="@color/reviews"
            android:textSize="@dimen/normal_size"
            app:layout_constraintBottom_toBottomOf="@+id/imgStar1"
            app:layout_constraintStart_toEndOf="@+id/imgStar5"
            app:layout_constraintTop_toTopOf="@+id/imgStar1" />

        <TextView
            android:id="@+id/txtStoryline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_size"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtReviews"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/txtMovieDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_desc"
            android:textColor="@color/movie_desc"
            android:textSize="@dimen/normal_size"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtStoryline"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/txtCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_size"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieDesc"
            app:lineHeight="20sp" />

        <ImageView
            android:id="@+id/imgCast1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/robert_downey_jr"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/txtCast"
            app:srcCompat="@drawable/cast1" />

        <ImageView
            android:id="@+id/imgCast2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/chris_evans"
            app:layout_constraintBottom_toBottomOf="@+id/imgCast1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/imgCast1"
            app:layout_constraintTop_toTopOf="@+id/imgCast1"
            app:srcCompat="@drawable/cast2" />

        <ImageView
            android:id="@+id/imgCast3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="@+id/imgCast1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/imgCast2"
            app:layout_constraintTop_toTopOf="@+id/imgCast2"
            app:srcCompat="@drawable/cast3" />

        <ImageView
            android:id="@+id/imgCast4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="@+id/imgCast1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toEndOf="@+id/imgCast3"
            app:layout_constraintTop_toTopOf="@+id/imgCast1"
            app:srcCompat="@drawable/cast4" />

        <TextView
            android:id="@+id/txtCast1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/movie_cast"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@+id/imgCast1"
            app:layout_constraintStart_toStartOf="@+id/imgCast1"
            app:layout_constraintTop_toBottomOf="@+id/imgCast1"
            app:lineHeight="16sp" />

        <TextView
            android:id="@+id/txtCast2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            android:textColor="@color/movie_cast"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@+id/imgCast2"
            app:layout_constraintStart_toStartOf="@+id/imgCast2"
            app:layout_constraintTop_toTopOf="@+id/txtCast1"
            app:lineHeight="16sp" />

        <TextView
            android:id="@+id/txtCast3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/movie_cast"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@+id/imgCast3"
            app:layout_constraintStart_toStartOf="@+id/imgCast3"
            app:layout_constraintTop_toTopOf="@+id/txtCast1"
            app:lineHeight="16sp" />

        <TextView
            android:id="@+id/txtCast4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/movie_cast"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@+id/imgCast4"
            app:layout_constraintStart_toStartOf="@+id/imgCast4"
            app:layout_constraintTop_toTopOf="@+id/txtCast1"
            app:lineHeight="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>